ITM and Bug Id: 545, 547, 556,557

--- a/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
@@ -497,6 +497,7 @@
                     $("#btnAddNew").hide()
                     $('#drpPhase').attr("disabled", false);
                     $('#drpRole').attr("disabled", false);
+                    $(".app-main_Scroll").animate({ scrollTop: 500 }, 1000);
                 }
                 else {
                     alert("something went wrong");
