--- a/ProAcc/Views/Assessment/ActivitieReport.cshtml
+++ b/ProAcc/Views/Assessment/ActivitieReport.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-	ViewBag.Title = "ActivitieReport";
+	ViewBag.Title = "ActivitiesReport";
 	Layout = "~/Views/shared/_Layout.cshtml";
 }
 <a class="card-title">Activities Report</a>
