--- a/ProAcc/Views/Assessment/ReadinessReport.cshtml
+++ b/ProAcc/Views/Assessment/ReadinessReport.cshtml
@@ -1121,6 +1121,7 @@
                         value: 0,
                         text: "-Select-"
                     }));
+				  $('#IDCustomer').prop('title', $("#IDCustomer option:selected").text());
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("LoadProject","Home")',
@@ -1160,7 +1161,8 @@
 					select.append($('<option/>', {
 						value: 0,
 						text: "-Select-"
-					}));
+                    }));
+				$('#IDProject').prop('title', $("#IDProject option:selected").text());
 			$.ajax({
 				type: "POST",
 				url: '@Url.Action("LoadInstance","Home")',
@@ -1197,7 +1199,8 @@
 					 $('#SubmitInstance').prop("disabled", true);
 				} else {
 					$('#SubmitInstance').prop("disabled", false);
-				}
+                }
+				$('#IDInstance').prop('title', $("#IDInstance option:selected").text());
 			});
 	});
 	$('#SubmitInstance').click(function () {
