--- a/ProAcc/Views/IssueTrack/IndexPage.cshtml
+++ b/ProAcc/Views/IssueTrack/IndexPage.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/shared/_Layout.cshtml";
 
 }
-
+    <a class="card-title">Issue List</a>
     <div class="row instanceRow" style="padding: 1em;">
         <div class="col-lg-12 card">
             <div class="row">
@@ -71,6 +71,7 @@
                             value: 0,
                             text: "-Select-"
                         }));
+             $('#IDCustomer').prop('title', $("#IDCustomer option:selected").text());
                 $.ajax({
                     type: "POST",
                     url: '@Url.Action("LoadProject","Home")',
@@ -108,6 +109,7 @@
                             value: 0,
                             text: "-Select-"
                         }));
+            $('#IDProject').prop('title', $("#IDProject option:selected").text());
                 $.ajax({
                     type: "POST",
                     url: '@Url.Action("LoadInstanceforResource","Home")',
@@ -145,9 +147,11 @@
      //           } else {
 					//$('#SubmitInstance').prop("disabled", false);
      //           }
+            $('#IDInstance').prop('title', $("#IDInstance option:selected").text());
             });
 
         $("#SubmitInstance").click(function () {
+            
             loadIssueTrackReport()
         });
 
