--- a/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
@@ -137,6 +137,7 @@
                         value: 0,
                         text: "-Select-"
                     }));
+         $('#IDCustomer').prop('title', $("#IDCustomer option:selected").text());
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("LoadProject","Home")',
@@ -174,6 +175,7 @@
                         value: 0,
                         text: "-Select-"
                     }));
+        $('#IDProject').prop('title', $("#IDProject option:selected").text());
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("LoadInstanceforResource","Home")',
@@ -210,7 +212,8 @@
                      $('#SubmitInstance').prop("disabled", true);
                 } else {
 					$('#SubmitInstance').prop("disabled", false);
-                }
+        }
+        $('#IDInstance').prop('title', $("#IDInstance option:selected").text());
             });
    $('#SubmitInstance').click(function () {
         var IDInstance = $("#IDInstance").val();
