--- a/ProAcc/Views/ProjectMonitor/PostConvertionMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/PostConvertionMonitor.cshtml
@@ -160,6 +160,7 @@
                         value: 0,
                         text: "-Select-"
                     }));
+         $('#IDCustomer').prop('title', $("#IDCustomer option:selected").text());
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("LoadProject","Home")',
@@ -197,6 +198,7 @@
                         value: 0,
                         text: "-Select-"
                     }));
+        $('#IDProject').prop('title', $("#IDProject option:selected").text());
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("LoadInstanceforResource","Home")',
@@ -233,7 +235,8 @@
                      $('#SubmitInstance').prop("disabled", true);
                 } else {
 					$('#SubmitInstance').prop("disabled", false);
-                }
+        }
+        $('#IDInstance').prop('title', $("#IDInstance option:selected").text());
             });
    $('#SubmitInstance').click(function () {
         var IDInstance = $("#IDInstance").val();
