--- a/ProAcc/Views/Resource/ResourceAssessment.cshtml
+++ b/ProAcc/Views/Resource/ResourceAssessment.cshtml
@@ -95,6 +95,8 @@
                         value: 0,
                         text: "-Select-"
                     }));
+         $('#IDCustomer').prop('title', $("#IDCustomer option:selected").text());
+
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("LoadProject","Home")',
@@ -132,6 +134,7 @@
                         value: 0,
                         text: "-Select-"
                     }));
+        $('#IDProject').prop('title', $("#IDProject option:selected").text());
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("LoadInstanceforResource","Home")',
@@ -168,7 +171,8 @@
                      $('#SubmitInstance').prop("disabled", true);
                 } else {
 					$('#SubmitInstance').prop("disabled", false);
-                }
+        }
+        $('#IDInstance').prop('title', $("#IDInstance option:selected").text());
             });
     $('#SubmitInstance').click(function () {
         var IDInstance = $("#IDInstance").val();
