Issue Track and Bug ID: 541,552

--- a/ProAcc/Views/IssueTrack/_IssueTrackIndex.cshtml
+++ b/ProAcc/Views/IssueTrack/_IssueTrackIndex.cshtml
@@ -85,10 +85,11 @@
 
     $(document).ready(function () {
 
-        $("#tblIssue").dataTable({
+       $("#tblIssue").dataTable({
             "columnDefs": [
                 { "width": "20%", "targets": 1 }
-            ]
+            ],
+            "order": [[11, "asc"]]
         });
     });
 </script>
