--- a/ProAcc/Views/User/Index.cshtml
+++ b/ProAcc/Views/User/Index.cshtml
@@ -18,27 +18,17 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cre_on)
-            </th>
-            <th>
-                Email               
-            </th>
+            <th>Created</th>
+            <th>Email</th>
             <th>
                 @Html.DisplayNameFor(model => model.Phone)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.LoginId)
             </th>
-            <th>
-                Role
-            </th>
-            <th>
-                User Type
-            </th>
-            <th>
-                Customer Name
-            </th>
+            <th>Role</th>
+            <th>User Type</th>
+            <th>Customer Name</th>
             <th>Status</th>
             <th>Actions</th>
         </tr>
@@ -51,9 +41,8 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cre_on, "{MM/dd/yyyy}")
+                @Html.DisplayFor(modelItem => item.Cre_on)
             </td>
-            @Html.HiddenFor(modelItem => item.UserId)
             <td>
                 @Html.DisplayFor(modelItem => item.EMail)
             </td>
@@ -64,9 +53,6 @@
             <td>
                 @Html.DisplayFor(modelItem => item.LoginId)
             </td>
-            @*<td>
-            @Html.DisplayFor(modelItem => item.Password)
-        </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.RoleMaster.RoleName)
             </td>
@@ -115,7 +101,7 @@
     $(document).ready(function () {
         $("#prt").hide();
         $("#tblUserTable").dataTable({
-           "order": [[1, 'desc']],
+           "order": [[2, 'desc']],
             //"ordering": false,
             "columnDefs": [
                 {
